Change the storage location of committee.json

--- a/stats.ipynb
+++ b/stats.ipynb
@@ -468,7 +468,7 @@
     "    \"BarData_YEAR\":BarData_YEAR\n",
     "}\n",
     "\n",
-    "file_name = 'committer.json'\n",
+    "file_name = './assets/json/committer.json'\n",
     "\n",
     "with open(file_name,'w') as file_obj:\n",
     "    json.dump(committer_dic,file_obj)"
